Generate grapheme tables from Unicode 17 data